# sequenceTools

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  Dockerfile.linux  Dockerfile.static-linux  LICENSE  Makefile  README  README.md  SequenceTools.code-workspace  barcodeDemulti.py  convertf_wrapper.hs  filterTrimFastq.d  genToVcf.hs  gzip.d  mergeit_wrapper.hs  preseqWizard.py  qp3Pop_wrapper.hs  samMarkDup.py  sequenceTools.cabal  simpleBamCaller.hs  smartpca_wrapper.hs  stack.yaml  vcf2eigenstrat.hs  vcfRemoveDuplicates.awk
.github/workflows/: Dockerfile.centos  Dockerfile.centos_aarch64  build-and-test.yaml  build-and-test.yaml.disabled  release.yaml
mergeAndClipFastq/: fastqTools.cabal  mergeAndClipFastq.cabal  stack.yaml
mergeAndClipFastq/app/: Main.hs
mergeAndClipFastq/lib/: Lib.hs
mergeAndClipFastq/mergeAndClipFastq/: Main.hs
mergeAndClipFastq/test/: Spec.hs
old/: Makefile  filterTrimFastq.d
old/src-simpleBamCaller/: simpleBamCaller.hs
paper/: paper.bib  paper.md
scripts/: barcodeDemulti.py  convertf_wrapper.hs  makeAdmixtureDat.hs  mergeit_wrapper.hs  normaliseBimWithVCF.hs  qp3Pop_wrapper.hs  qpDstat_wrapper.hs  samMarkDup.py  smartpca_wrapper.hs
scripts/unmaintained/: genToVcf.hs  makeAdmixtureDat.hs  normaliseBimWithVCF.hs  samMarkDup.py  vcfToGen.py
simpleBamCaller/: OrderedZip.hs  orderedZip.hs  simpleBamCaller.cabal  simpleBamCaller.hs  stack.yaml
src-executables/: genoStats.hs  pileupCaller.hs  vcf2eigenstrat.hs
src-genoStats/: genoStats.hs
src-normaliseBimWithVCF/: normaliseBimWithVCF.hs
src-pileupCaller/: pileupCaller.hs
src-simpleBamCaller/: simpleBamCaller.hs
src-vcf2eigenstrat/: stack.yaml  vcf2eigenstrat.hs
src/SeqTools/: Fasta.hs  OrderedZip.hs  VCF.hs
src/SequenceTools/: PileupCaller.hs  Utils.hs
test/SequenceTools/: PileupCallerSpec.hs  UtilsSpec.hs
test/testDat/: 1240k_eigenstrat_snp_short.pos.txt  1240k_eigenstrat_snp_short.snp.txt  AncientBritish.short.pileup.backup.txt  AncientBritish.short.pileup.txt  makeTestDat.sh
vcf2eigenstrat/: OrderedZip.hs  vcf2eigenstrat.cabal  vcf2eigenstrat.hs
