name:                sequenceTools
version:             1.3.0
license:             GPL-3
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan.schiffels@mac.com
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:    SequenceTools.Utils,
                        SequenceTools.PileupCaller
    hs-source-dirs:     src
    build-depends:      base >= 4.7 && < 5, optparse-applicative, random, sequence-formats,
                        bytestring, vector, pipes
    other-modules:      Paths_sequenceTools
    default-language:   Haskell2010

Test-Suite sequenceToolsTests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base, hspec, sequenceTools, sequence-formats, vector, bytestring, pipes
  other-modules:       SequenceTools.UtilsSpec,
                       SequenceTools.PileupCallerSpec
  default-language:    Haskell2010

executable pileupCaller
    main-is:            pileupCaller.hs
    hs-source-dirs:     src-executables
    build-depends:      base, sequenceTools, sequence-formats, transformers, bytestring,
                        optparse-applicative, pipes, pipes-safe, pipes-ordered-zip, random,
                        split
    default-language:   Haskell2010
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N2
    other-modules:      Paths_sequenceTools

executable vcf2eigenstrat
    main-is:            vcf2eigenstrat.hs
    hs-source-dirs:     src-executables
    build-depends:      base, sequenceTools, pipes-ordered-zip, sequence-formats, bytestring, vector, optparse-applicative, pipes, pipes-safe
    default-language:   Haskell2010
    other-modules:      Paths_sequenceTools

executable genoStats
    main-is:            genoStats.hs
    hs-source-dirs:     src-executables
    build-depends:      base, sequenceTools, exceptions, sequence-formats, pipes, errors, 
                        pipes-safe, foldl, vector, lens-family, pipes-group,
                        optparse-applicative, bytestring
    default-language:   Haskell2010
    other-modules:      Paths_sequenceTools

executable normaliseBimWithVCF
    main-is:            normaliseBimWithVCF.hs
    hs-source-dirs:     src-executables
    build-depends:      base, sequenceTools, exceptions, system-filepath, sequence-formats, bytestring,
                        pipes, pipes-ordered-zip, pipes-safe, optparse-applicative
    default-language:   Haskell2010
    other-modules:      Paths_sequenceTools