name:                sequenceTools
version:             1.5.3.1
synopsis:            A package with tools for processing DNA sequencing data
description:         The tools in this package process sequencing Data, in particular from ancient DNA sequencing libraries. Key tool in this package is pileupCaller, a tool to randomly sample genotypes from sequencing data.
license:             GPL-3
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan.schiffels@mac.com
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
Homepage:	         https://github.com/stschiff/sequenceTools
Bug-Reports:         https://github.com/stschiff/sequenceTools/issues
extra-source-files:  README.md,
                     Changelog.md

library
    exposed-modules:    SequenceTools.Utils,
                        SequenceTools.PileupCaller
    hs-source-dirs:     src
    build-depends:      base >= 4.7 && < 5, optparse-applicative, random,
                        sequence-formats, bytestring, vector, pipes
    other-modules:      Paths_sequenceTools
    default-language:   Haskell2010

Test-Suite sequenceToolsTests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base, hspec, sequenceTools, sequence-formats,
                       vector, bytestring, pipes
  other-modules:       SequenceTools.UtilsSpec,
                       SequenceTools.PileupCallerSpec
  default-language:    Haskell2010

executable pileupCaller
    main-is:            pileupCaller.hs
    hs-source-dirs:     src-executables
    build-depends:      base, sequenceTools, sequence-formats,
                        optparse-applicative, pipes, vector, random, bytestring,
                        pipes-safe, pipes-ordered-zip, split, ansi-wl-pprint, transformers
    default-language:   Haskell2010
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N2

executable vcf2eigenstrat
    main-is:            vcf2eigenstrat.hs
    hs-source-dirs:     src-executables
    build-depends:      base, sequenceTools, pipes-ordered-zip,
                        sequence-formats, bytestring, vector,
                        optparse-applicative, pipes, pipes-safe
    default-language:   Haskell2010

executable genoStats
    main-is:            genoStats.hs
    hs-source-dirs:     src-executables
    build-depends:      base, sequence-formats, sequenceTools,
                        foldl, bytestring, vector, lens-family, optparse-applicative,
                        pipes, pipes-group, pipes-safe
    default-language:   Haskell2010
