name:                fastqTools
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/mergeAndClipFastq#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

executable mergeAndClipFastq
  hs-source-dirs:      mergeAndClipFastq
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fastqTools
                     , optparse-applicative
                     , pipes-zlib
                     , pipes
                     , pipes-text
                     , pipes-attoparsec
                     , attoparsec
                     , pipes-bytestring
                     , text
                     , managed
                     , transformers
  default-language:    Haskell2010

test-suite mergeAndClipFastq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mergeAndClipFastq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
