name:                simpleBamCaller
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan.schiffels@mac.com
copyright:           2015 Stephan Schiffels
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10

executable simpleBamCaller
  main-is:             simpleBamCaller.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N2
  build-depends:       base
                     , turtle
                     , text
                     , optparse-applicative
                     , random
  default-language:    Haskell2010

