name:                simpleBamCaller
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan.schiffels@mac.com
copyright:           2015 Stephan Schiffels
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10

executable simpleBamCaller
  main-is:             simpleBamCaller.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N2
  other-modules:       OrderedZip
  build-depends:       async
                     , attoparsec
                     , base
                     , MonadRandom
                     , optparse-applicative
                     , pipes
                     , pipes-attoparsec
                     , pipes-cliff
                     , pipes-safe
                     , pipes-text
                     , random
                     , random-shuffle
                     , stm
                     , text
                     , transformers
                     , turtle
  default-language:    Haskell2010

